Fix cropper styles that were broken

--- a/client/app/styles/_modal.styl
+++ b/client/app/styles/_modal.styl
@@ -56,6 +56,8 @@
 
     .modalCY-body
         overflow hidden
+        // Inherited flex layout for children
+        display  flex
         flex     1
 
         [aria-hidden=true]
