--- a/client/app/styles/_object-picker.styl
+++ b/client/app/styles/_object-picker.styl
@@ -77,8 +77,8 @@
     // Cropping body
     .croperCont
         flex-grow 1
-        margin    10%
         position  relative
+        margin 1em
 
     #frame-img-to-crop
         position         relative
@@ -96,6 +96,8 @@
 
     #frame-preview
         position absolute
+        top      0
+        right    0
         overflow hidden
 
     #img-preview
